k8s/istio/ingress-gateway-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  type: NodePort
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
    nodePort: 32401
  - name: http2
    port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 31541  # Kind config에서 설정한 포트와 매칭
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
    nodePort: 31026  # Kind config에서 설정한 포트와 매칭
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
