k8s/istio/ingress-gateway-service.yaml
# Istio Ingress Gateway Service with fixed NodePorts
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  type: LoadBalancer
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 31541
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    nodePort: 31026
    protocol: TCP
  - name: status-port
    port: 15021
    targetPort: 15021
    protocol: TCP
