k8s/istio/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /api/
    route:
    - destination:
        host: app-stack-api-gateway
        port:
          number: 8001
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app-stack-frontend
        port:
          number: 80
