k8s/istio/monitoring-service-entries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: kiali-external
  namespace: default
spec:
  hosts:
  - kiali.istio-system.svc.cluster.local
  ports:
  - number: 20001
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_INTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: jaeger-external
  namespace: default
spec:
  hosts:
  - jaeger-query.istio-system.svc.cluster.local
  ports:
  - number: 16686
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_INTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: grafana-external
  namespace: default
spec:
  hosts:
  - monitoring-stack-grafana.monitoring.svc.cluster.local
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_INTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: prometheus-external
  namespace: default
spec:
  hosts:
  - monitoring-stack-kube-prom-prometheus.monitoring.svc.cluster.local
  ports:
  - number: 9090
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_INTERNAL
